# wt

./: .gitignore  LICENSE  README.md  config.py  db.py  env.py  flake.nix  main.py  package.nix  proxy.py  pyproject.toml  util.py
.zed/: settings.json
examples/docker/: README.md  docker-compose.override.template.yaml  docker-compose.yaml  worktree.nix
examples/frontend_and_backend/: README.md  worktree-nested.nix  worktree.nix
examples/frontend_and_backend/backend/: .env  package.json  pnpm-lock.yaml
examples/frontend_and_backend/backend/src/: index.ts
examples/frontend_and_backend/frontend/: .env  vite.config.ts
examples/frontend_and_backend/frontend/src/: main.ts
examples/simple/: .env  README.md  server.sh  worktree.nix
src/wt/: config.py  db.py  main.py  proxy.py
tests/: test_config_parser.py  test_config_validator.py  test_util.py
