[project]
name = "wt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cyclopts>=4.12.0",
    "inquirer>=3.4.1",
    "jinja2>=3.1.6",
    "nix-manipulator>=0.1.3",
    "pydantic>=2.13.4",
    "xdg-base-dirs>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.35",
]

[project.scripts]
wt = "wt.main:app"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
